// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default basic: basic 1`] = `
"
export default function(state: State = initialState, action) {
  switch (action.type) {
    case Actions.INCREMENT:
      return { ...state, count: state + 1 }

    default:
      return state
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

export default function (state: State = initialState, action) {
  switch (action.type) {
    case Actions.DECREMENT:
      return {
        ...state
      };

    case Actions.INCREMENT:
      return { ...state, count: state + 1 };

    default:
      return state;
  }
}
"
`;

exports[`default basic: basic 2`] = `
"
function update(state: State = initialState, action) {
  switch (action.type) {
    case Actions.INCREMENT:
      return { ...state, count: state + 1 }
    default:
      return state
  }
}

export default function(state: State = initialState, action) {
  switch (action.type) {
    case Actions.INCREMENT:
      return update(state, action)
    default:
      return state
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

function update(state: State = initialState, action) {
  switch (action.type) {
    case Actions.INCREMENT:
      return { ...state, count: state + 1 };
    default:
      return state;
  }
}

export default function (state: State = initialState, action) {
  switch (action.type) {
    case Actions.DECREMENT:
      return {
        ...state
      };

    case Actions.INCREMENT:
      return update(state, action);
    default:
      return state;
  }
}
"
`;

exports[`default not Actions: not Actions 1`] = `
"
export default function(state: State = initialState, action) {
  switch (action.type) {
    case Other.INCREMENT:
      return { ...state, count: state + 1 }
    case Actions.INCREMENT:
      return { ...state, count: state + 1 }
    default:
      return state
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

export default function (state: State = initialState, action) {
  switch (action.type) {
    case Actions.DECREMENT:
      return {
        ...state
      };

    case Other.INCREMENT:
      return { ...state, count: state + 1 };
    case Actions.INCREMENT:
      return { ...state, count: state + 1 };
    default:
      return state;
  }
}
"
`;

exports[`when actionTypes.js is empty 1. s2s-reducer-case-creater: 1. s2s-reducer-case-creater 1`] = `
"
export default function(state: State = initialState, action) {
  switch (action.type) {
    case Actions.INCREMENT:
      return { ...state, count: state + 1 }

    default:
      return state
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

export default function (state: State = initialState, action) {
  switch (action.type) {
    case Actions.INCREMENT:
      return { ...state, count: state + 1 };

    default:
      return state;
  }
}
"
`;

exports[`when has same property 1. s2s-reducer-case-creater: 1. s2s-reducer-case-creater 1`] = `
"
export default function(state: State = initialState, action) {
  switch (action.type) {
    default:
      return state
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

export default function (state: State = initialState, action) {
  switch (action.type) {
    case Actions.SET:
      return {
        ...state,
        count: action.count
      };

    default:
      return state;
  }
}
"
`;
